# LLM-Finetune-Service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/splits/: test.jsonl  train.jsonl  validation.jsonl
docs/: architecture.md  evaluation_report.md  model_card.md  reproducibility.md  sample_transformations.md
docs/serving/: 2026-03-28-model-card.md
docs/training-notes/: 2026-03-26-recovered-serving-performance-note-enterprise-to-casual-llm-fine-tuning.md  2026-03-28-model-card.md  2026-03-30-recovered-training-note-reproducibility-guide.md
scripts/: build_dataset.py  evaluate.py  preview_dataset.py  train.py  validate_dataset.py
src/llm_finetune_service/: __init__.py  __main__.py  cli.py  config.py
src/llm_finetune_service/api/: app.py
src/llm_finetune_service/data/: __init__.py  dataset_builder.py  validation.py
src/llm_finetune_service/eval/: metrics.py  run_eval.py
src/llm_finetune_service/inference/: __init__.py  cache.py  dev_fallback.py  model.py
src/llm_finetune_service/training/: prompts.py  train.py
tests/: test_api.py  test_dataset.py  test_eval_metrics.py  test_inference_modes.py
