[tool.poetry]
name = "llm-finetune-service"
version = "0.1.0"
description = "A reproducible LoRA fine-tuning project for rewriting formal enterprise emails into concise Slack-style updates."
authors = ["Mohit Tiwari <mohittiwari4022@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llm_finetune_service", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.2.2"
transformers = "^4.39.3"
peft = "^0.10.0"
accelerate = "^1.5.2"
datasets = "^2.18.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
redis = "^5.0.3"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.5"

[tool.poetry.scripts]
llm-finetune-service = "llm_finetune_service.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
